Fix textinput margin & infopanel word wrapping

--- a/app/src/components/TextInput/TextInput.scss
+++ b/app/src/components/TextInput/TextInput.scss
@@ -34,5 +34,6 @@
     font-size: 0.9em;
     font-family: 'Lato';
     color: $gray-60;
+    margin-left: 10px;
   }
 }
